--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,7 +4,7 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :name, "お名前(姓名)" %></td>
+    <%= f.label :name, "おなまえ" %></td>
     <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "" %></td>
   </div>
 
