--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -20,10 +20,10 @@
             <!-- マイページ -->
             <%= link_to " ","#", class: "item-a a3 fas fa-user" %>
             <ul class="mypage-ul">
-              <li class="mypage-li li-gray"><%= link_to "ユーザー名表示する", user_path(current_user.id), class: "fas fa-heart mypage-a" %></li>
-              <li class="mypage-li"><%= link_to " マイリスト", list_items_path(current_user.id), class: "fas fa-heart mypage-a" %></li>
-              <li class="mypage-li"><%= link_to " スポット編集", edit_spot_path(current_user.id), class: "fas fa-map mypage-a" %></li>
-              <li class="mypage-li"><%= link_to " ログアウト", users_sign_out_path, method: :delete, class: "fas fa-sign-out-alt mypage-a" %></li>
+              <li class="mypage-li li-gray"><%= link_to  @user.name, user_path(current_user.id), class: "fas fa-user mypage-a" %></li>
+              <li class="mypage-li"><%= link_to "マイリスト", list_items_path(current_user.id), class: "fas fa-heart mypage-a" %></li>
+              <li class="mypage-li"><%= link_to "スポット編集", edit_spot_path(current_user.id), class: "fas fa-map mypage-a" %></li>
+              <li class="mypage-li"><%= link_to "ログアウト", users_sign_out_path, method: :delete, class: "fas fa-sign-out-alt mypage-a" %></li>
             </ul>
           </li>
         </ul>
