--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 
 
 /*----------------------------------------------------共通部分----------------------------------------------------*/
-/*コンテンツ幅:960px*/
+/*コンテンツ幅:1080px*/
 * {
   margin: 0;
   padding: 0;
@@ -80,10 +80,10 @@ body{
   box-shadow: 0px 6px 10px rgba(0,0,0,0.1);
 }
 .header-content{
-  width:960px;
+  width:1080px;
   margin:0 auto;
   margin-top:10px;
-  line-height: 50px;
+  line-height: 60px;
 }
 .header-logo{
   // background-image: url(img/logo.png);
@@ -117,7 +117,7 @@ body{
   font-size:14px;
   font-weight:600;
   position:absolute;
-  top: 40px;
+  top: 45px;
   left:-3px;
 }
 .a2::after{
@@ -125,7 +125,7 @@ body{
   font-size:14px;
   font-weight:600;
   position:absolute;
-  top: 40px;
+  top: 45px;
   left:10px;
 }
 .a3::after{
@@ -133,7 +133,7 @@ body{
   font-size:14px;
   font-weight:600;
   position:absolute;
-  top: 40px;
+  top: 45px;
   left:8px;
 }
 .a4::after{
@@ -141,7 +141,7 @@ body{
   font-size:14px;
   font-weight:600;
   position:absolute;
-  top: 40px;
+  top: 45px;
   left:15px;
 }
 .a5::after{
@@ -149,7 +149,7 @@ body{
   font-size:14px;
   font-weight:600;
   position:absolute;
-  top: 40px;
+  top: 45px;
   left:12px;
 }
 .a6::after{
@@ -157,7 +157,7 @@ body{
   font-size:14px;
   font-weight:600;
   position:absolute;
-  top: 40px;
+  top: 45px;
   left:16px;
 }
 .a7::after{
@@ -165,7 +165,7 @@ body{
   font-size:14px;
   font-weight:600;
   position:absolute;
-  top: 40px;
+  top: 45px;
   left:16px;
 }
 .a8::after{
@@ -173,7 +173,7 @@ body{
   font-size:14px;
   font-weight:600;
   position:absolute;
-  top: 40px;
+  top: 45px;
   left:16px;
 }
 .a9::after{
@@ -181,7 +181,7 @@ body{
   font-size:14px;
   font-weight:600;
   position:absolute;
-  top: 40px;
+  top: 45px;
   left:16px;
 }
 
@@ -251,8 +251,8 @@ body{
 }
 /*メインの幅---------------------------------------*/
 .body-content{
-  width:960px;
-  margin: 50px auto;
+  width:1080px;
+  margin:30px auto;
   line-height:1.65;
 }
 
@@ -302,12 +302,16 @@ body{
 }
 /*検索--------------------------------------------------*/
 .index-header{
-  width:960px;
-  margin:0 auto
+  width:1080px;
+  margin:0 auto;
+  border-bottom:solid 1px #eaeaea;
+}
+.index-header-box{
+  float:left;
+  margin-bottom:20px;
 }
 .search{
-  margin:30px 0;
-  width:300px;
+  width:450px;
 }
 #form{
   position:relative;
@@ -347,6 +351,42 @@ color:#7fbfff;
   top: 18px;
 }
 
+// カテゴリー選択ボタン
+.category{
+  display:block;
+
+}
+.list-cate{
+  list-style-type: none;
+  float:left;
+}
+.item-cate{
+  float:left;
+  margin:0 10px;
+}
+
+// ルート検索
+.route{
+  // width:1060px;
+  height:100px;
+}
+.list-route{
+  list-style-type: none;
+}
+.item-route{
+  display:block;
+  width:200px;
+  height:50px;
+  float:left;
+  margin:0 10px;
+  font-size:15px;
+  text-align: center;
+  line-height: 50px;
+  border:solid 2px #eaeaea;
+  border-radius:10px;
+  margin:20px;
+}
+
 /*チェックボックス--------------------------------*/
 .checkbox01-input{
   display: none;
@@ -384,6 +424,20 @@ color:#7fbfff;
 }
 
 /*保育園詳細------------------------------------*/
+.show-header{
+  height:100px;
+  position:relative;
+}
+.show-header:after {
+content: "";
+position: absolute;
+left: 0;
+bottom: -7px;
+width: 100%;
+height: 10px;
+background: -webkit-repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #fff 4px);
+background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #fff 4px);
+}
 .s{
   position:relative;
 }
@@ -413,27 +467,26 @@ color:#7fbfff;
   bottom: -9px;
   left: 30px;
 }
-
 .addlist{
-  margin-top:-7px;
-  width:210px;
-  background-color:#fff;
-/*  box-shadow: 0px 0px 0px 5px #ffeaea;*/
-  border: solid 1px #A0E0E0;
-  border-radius:30px;
-  padding:10px;
-}
-.addlist-icon{
+  display:block;
+  float:right;
+  margin-right:20px;
   font-size:25px;
   color:#5EE1EF;
+  margin-top:60px;
+}
+.addlist::after{
+  content:'マイリストに追加';
+  font-size:15px;
+  font-weight:600;
 }
 .acctive{
   color:#f95f92;
 }
-.type-box{
+.cate-logo{
   padding: 0.2em 0.5em;
   margin: 0 10px;
-  /*color: #565656;*/
+  margin-top:20px;
   background: #ffeaea;
   box-shadow: 0px 0px 0px 5px #ffeaea;
   border: dashed 2px #ffc3c3;
@@ -441,7 +494,7 @@ color:#7fbfff;
   width:50px;
   height:50px;
 }
-.type{
+.cate{
   margin: 0;
   padding: 0;
   text-align:center;
@@ -468,24 +521,24 @@ color:#7fbfff;
   padding:5px 10px 5px 15px;
   border-left:solid 5px #FFD731;
 }
-.map-area-s{
-  width:600px;
-  height:400px;
-  margin:10px auto;
-  background-color: #A0E0E0;
+.map-area{
+  margin:10px 0;
 }
 
 
 .tell-box{
-  background-color:#FFFC9C;
+  margin:0 auto;
+  margin-top:50px;
   height:50px;
+  width:250px;
+  background-color:#FFFC9C;
   text-align:center;
   border-radius:10px;
 }
 .tell{
+  margin-top:15px;
   font-size:20px;
   font-weight:600;
-  line-height:50px;
 }
 .tell:hover{
   color:#ACBFC6;
