--- a/app/views/nurseries/edit.html.erb
+++ b/app/views/nurseries/edit.html.erb
@@ -3,8 +3,8 @@
 <%= form_for(@nursery) do |f| %>
 	<%= f.hidden_field :admin_id, :value => @admin %>
 	<div class="field">
-		%= f.label :image_id, "イメージ" %>
-		%= f.attachment_field :image, placeholder: "画像のアップロード" %>
+		<%= f.label :image_id, "イメージ" %>
+		<%= f.attachment_field :image, placeholder: "画像のアップロード" %>
 	</div>
 	<div class="field">
 		<%= f.label :name, "保育園の名前" %>
