--- a/app/views/nurseries/index.html.erb
+++ b/app/views/nurseries/index.html.erb
@@ -105,7 +105,7 @@
         </div>
       </div> -->
 
-      <div class="col-sm-12 main-content">
+      <div class="main-content">
         <!-- 検索フォーム実装位置 -->
         <div class="index-header clearfix">
           <div class="index-header-box search">
@@ -130,9 +130,7 @@
         </div>
 
         <!-- マップ実装位置 -->
-        <div class="map-area">
-          <div id="map" style='width: 100%; height: 600px;'></div>
-        </div>
+          <div id="map" class="map-area" style='width: 100%; height: 600px;'></div>
       </div>
 
         <div class="nursery-area">
