--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -504,11 +504,10 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   float:left;
 }
 
-
+.show-main{
+  margin-top:40px;
+}
 .main-img{
-  background-image: url(img/n-img.png);
-  background-size:cover;
-  background-position: center;
   height:300px;
 /*  margin:0 auto;*/
 }
@@ -528,7 +527,6 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 
 .tell-box{
   margin:0 auto;
-  margin-top:50px;
   height:50px;
   width:250px;
   background-color:#FFFC9C;
